fix scrollbars

--- a/src/sass/control_sidebar.scss
+++ b/src/sass/control_sidebar.scss
@@ -22,3 +22,12 @@
         border-bottom: 1px solid white;
     }
 }
+
+.control-sidebar::before {
+    content: '';
+    display: block;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    overflow: auto;
+}
